<resources>
    <string name="app_name">Mars Weather</string>
    <string name="project_name">NadecheStuder-pset5</string>
    <string name="weather_data_from">"Earth Date: "</string>
    <string name="solar_day">"Curiosity's martian solar day: "</string>
    <string name="last_update">"Last update: "</string>
    <string name="min_temp_c">"Min Temp "</string>
    <string name="max_temp_c">"Max Temp "</string>
    <string name="wind_speed">"Wind Speed: "</string>
    <string name="opacity">"Status: "</string>
    <string name="season">"Martian season: "</string>
    <string name="no_data">No Data</string>
    <string name="loading">Loading…</string>
    <string name="dateRange">Pick a different date</string>
    <string name="home">Get most recent date</string>
    <string name="cancel">Cancel</string>
    <string name="get">Get weather info</string>
    <string name="dialog_title">Change day</string>
    <string name="dialog_message">Choose a different martian solar day</string>
    <string name="toast_message">No data available for this day</string>

</resources>
